force-app/main/default/objects/Case/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>