force-app/main/default/objects/Case/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Feedback</label>
    <type>TextArea</type>
</CustomField>