force-app/main/default/objects/Case/recordTypes/Customer_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Customer_Feedback</fullName>
    <active>true</active>
    <businessProcess>Customer Feedback Process</businessProcess>
    <description>Record type for tracking customer complaints and feedback</description>
    <label>Customer Feedback</label>
</RecordType>